[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bengali-romanizer"
version = "0.1.0"
description = "A simple library for romanizing Bengali text"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["bengali", "romanization", "transliteration", "text-processing"]

[project.urls]
Homepage = "https://github.com/apakabarfm/bengali-romanizer"
Repository = "https://github.com/apakabarfm/bengali-romanizer.git"
Issues = "https://github.com/apakabarfm/bengali-romanizer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]